# task_tracking

./: .gitignore  CLAUDE.md  README.md  lefthook.yml
.kiro/specs/task-time-tracking/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: .env.example  main.py  pyproject.toml  test_timeentry.py
backend/api/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_project_color_alter_task_parent_and_more.py  0003_remove_task_hierarchy_task_level_task_root_and_more.py  0004_timeentry.py  0005_timeentry_project.py  0006_alter_timeentry_end_time.py  0007_alter_timeentry_duration_seconds.py  0008_task_description_timeentry_name.py  0009_alter_task_project.py  0010_task_duration_seconds_task_estimate_minutes.py
backend/config/: settings.py  urls.py
backend/tests/: README.md
backend/tests/api/: get_auth_token.py  test_postman.py
backend/tests/api/postman/: .gitignore  README.md  Task_Tracking_API.postman_collection.json  local.postman_environment.example.json
backend/tests/unit/: test_models.py
frontend/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: Button.stories.tsx  Button.tsx
frontend/src/services/: apiClient.ts
frontend/src/stores/: authStore.ts  createCrudStore.ts  projectStore.ts  tagStore.ts  taskStore.ts  timeEntryStore.ts  timerStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
(+5 files in other folders)
